--- a/src/app/modules/caja-banco/pages/ver-caja/ver-caja.html
+++ b/src/app/modules/caja-banco/pages/ver-caja/ver-caja.html
@@ -62,7 +62,7 @@
                         </div>
                         <div class="monto-row total">
                             <span class="label">Saldo Actual:</span>
-                            <span class="value">{{ formatoMoneda(caja.saldo_actual || 0) }}</span>
+                            <span class="value">{{ formatoMoneda(resumen.saldo_actual_calculado) }}</span>
                         </div>
                     </div>
                 </div>
